# python-data-process

./: .gitignore  README.md  pyproject.toml
src/.deepseek/: instructions.md
src/data-process/: data-process-csv.py  data-process-excel.py  school_exam_data_process.py
src/notebooks/: Create Dataframe.ipynb  Read FIles On Polars.ipynb  SeriesAndDataFrame.ipynb
src/notebooks/.ipynb_checkpoints/: Conversion Pandas Numpy-checkpoint.ipynb  SeriesAndDataFrame-checkpoint.ipynb
src/notebooks/plot/: plotnine库学习.ipynb
src/notebooks/polars/: 10 - Read-FIles-On-Polars.ipynb  11 - Read-Json-on-Polars.ipynb  12 - Write-FIles-On-Polars.ipynb  13 - Selecting-column-square-brackets.ipynb  14 - Select-2.ipynb  15 - multiple-Columns.ipynb  16 - Add-One-New-Column.ipynb  17 - Adding-Multiple-Columns.ipynb  18 - Transform-DataFrame.ipynb  19 - Iterating-DataFrame.ipynb  20 - Aggregates.ipynb  21 - Distinct.ipynb  22 - Square-Brackets-Filter.ipynb  23 - Integer-Columns.ipynb  24 - String-Columns.ipynb  25 - Date-Columns.ipynb  (+15 more)
src/office_tools/: DocToDocx.py  PDFToWord.py  WordToPDF.py  word_doc_docx_to_pdf.py
src/plot/: draw_something.py
src/regex/: RegexConstants.py  ssh_log.py
src/tests/: DataFrame_to_word.py  data-process.py  data_lun_test.py  docx_set_font.py  enough.py  justtest.py  kaishi.py  pkuseg_me.py  testtest.py
src/utils/: RegexConstants.py  copy_my_file_to_another_mkdir.py  draw_something.py  jiaokaofenli_picture.py  re_encoding.py  watchdog.py  xiaoshuo.py
src/web_Crawler/: data_process.py  jiaokaofenli_tongxinyuanli.py  my_jiaokaofenli.py  test.py
(+51 files in other folders)
